--- a/index.html
+++ b/index.html
@@ -22,20 +22,30 @@
   <body>
     <header>
       <!--Top bar-->
+      <br />
       <div class="container">
         <div class="row">
-          <h1 class="col-10">Restaurant & Lounge</h1>
-          <img
-            width="10"
-            height="50"
-            class="col-1"
-            src="https://i.imgur.com/S8Ffdqa.png"
-          />
-          <p id="items" class="col-1">0 items</p>
+          <div class="col-10">
+            <h1 class="col-10">Restaurant & Lounge</h1>
+          </div>
+          <div class="col-2">
+            <a id="buttonCarrito"
+              ><img
+                id="carrito"
+                class="px-1"
+                width="50"
+                height="45"
+                alt="Shopping car"
+                src="https://i.imgur.com/1EKrQIi.png"
+            /></a>
+            <span id="items">0 items</span>
+          </div>
         </div>
+        <hr />
       </div>
       <div class="container">
-        <img src="https://i.imgur.com/S8Ffdqa.png" />
+        <img alt="Delicious hamburger" src="https://i.imgur.com/S8Ffdqa.png" />
+        <hr />
       </div>
     </header>
     <div class="container">
@@ -44,30 +54,76 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" onclick="cargar(0)">Burgers </a>
+              <a id="burgers" class="nav-link">Burgers </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="cargar(1)">Tacos</a>
+              <a id="tacos" class="nav-link">Tacos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="cargar(2)">Salads</a>
+              <a id="salads" class="nav-link">Salads</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="cargar(3)">Desserts</a>
+              <a id="desserts" class="nav-link">Desserts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" onclick="cargar(4)">Drinks & Sides</a>
+              <a id="drinks" class="nav-link">Drinks & Sides</a>
             </li>
           </ul>
         </div>
       </nav>
+      <hr />
     </div>
     <main>
-      <h2 id="titulo" class="display-5 text-center py-3"></h2>
       <div class="container">
-        <div class="row" id="cards"></div>
+        <h2 id="titulo" class="display-5 text-center">Burgers</h2>
+        <hr />
+        <div class="row row-cols-1 row-cols-md-4" id="cards"></div>
       </div>
     </main>
+
+    <!--Modal-->
+    <div
+      class="modal fade"
+      id="cancelingModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLongTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">
+              Cancel the order
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Are you sure about cancelling the order?</p>
+          </div>
+          <div class="modal-footer">
+            <div class="row">
+              <button type="button" id="yes" data-dismiss="modal">
+                Yes, I want to cancel the order
+              </button>
+            </div>
+            <div class="row float-right">
+              <button type="button" id="no" data-dismiss="modal">
+                No, I want to continue adding products
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <br />
       <p class="text-center">
