--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 class="px-1"
                 width="50"
                 height="45"
-                alt="Shopping car"
+                alt="Car"
                 src="https://i.imgur.com/1EKrQIi.png"
             /></a>
             <span id="items">0 items</span>
@@ -127,7 +127,7 @@
     <footer>
       <br />
       <p class="text-center">
-        Contact us +57 3102105253-info@restaurant.com-@restaurant
+        Contact us: +57 3102105253-info@restaurant.com-@restaurant
       </p>
       >
     </footer>
